btnSaveText.RaiseEvent 내일 확인 필요

--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ __pycache__/
 *.pyc
 /XrayTEXT/Images/Medical_X-Ray_imaging_OPC06_nevit/2.png
 /XrayTEXT/Images/Medical_X-Ray_imaging_OPC06_nevit/1.png
+/XrayTEXT/Images/MCUCXR_0006_0
