MVVM으로 변경중

--- a/XrayTEXT/XrayTEXT.csproj
+++ b/XrayTEXT/XrayTEXT.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BindableObject.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\TreeViewFile.cs" />
     <Compile Include="XrayTextBox.xaml.cs">
       <SubType>Code</SubType>
