--- a/XrayTEXT/XrayTEXT.csproj
+++ b/XrayTEXT/XrayTEXT.csproj
@@ -43,6 +43,9 @@
     <OutputPath>.\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>x-ray.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
